# my_selenium_start_kit

./: 17_Guided_Project_Walkthrough.ipynb  18_Opening_and_Closing_Windows.ipynb  19_Opening_and_Closing_Tabs.ipynb  Chaining_Locators.ipynb  Locating_by_CSS_Selector.ipynb  Locating_by_Link_Text.ipynb  Locating_by_Name.ipynb  Locating_by_TagName.ipynb  Locating_by_XPath.ipynb  Useful_Web_Element_Methods_and_Attributes.ipynb  config.env  pyproject.toml  selenium_workable.py  settings.py  tmp.py  valid_env_setup.ipynb  驗證環境已建置.ipynb
.ipynb_checkpoints/: 測試安裝正確性-checkpoint.ipynb  驗證環境已建置-checkpoint.ipynb
